--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -22,6 +22,11 @@ body {
     clear:both;
 }
 
+.clear-pad-15 {
+    clear: both;
+    padding-top: 15px;
+}
+
 .full {
   background: url('../img/background.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -65,4 +70,12 @@ body {
 .instagram {
     width: 100%;
     text-align: center;
+}
+
+.alert {
+    display: none;
+}
+
+#rsvp-booking {
+    display: none;
 }
