--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -22,6 +22,11 @@ body {
     clear:both;
 }
 
+.clear-pad-5 {
+    clear: both;
+    padding-top: 5px;
+}
+
 .clear-pad-15 {
     clear: both;
     padding-top: 15px;
